5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1594_1801.log
== TEST (2019-06-25 22:31:13) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=4*("Abra"+nome)
print(a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:32:15) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=q*("Abra",nome)
print(a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:32:32) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=("Abra",nome)*q
print(a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:32:59) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=("Abra"+ nome)*q
print(a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:34:41) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=("Abra",nome)
print(q*a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:35:18) 
-- CODE:
nome=input("digite")
q=int(input"digite:")
a=("Abra" + nome)
print(q*a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:35:42) 
-- CODE:
nome=(input("digite")
q=int(input"digite:"))
a=("Abra" + nome)
print(q*a)
-- ERROR:
File "XXXX", line 2
    q=int(input"digite:"))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
